src/assets/scss/app.scss
// Vue Material
@import 'vue-material.scss';

// vars
$primary: #17969C;
$primary-dark: #116a6e;
$padding: 20vw;
$fonts: 'Inter', Arial, Helvetica, sans-serif;

// farman components
// fm-
@import 'components/bottomSheat.scss';
@import 'components/box.scss';
@import 'components/buttons.scss';
@import 'components/cards.scss';
@import 'components/comments.scss';
@import 'components/dropdown.scss';
@import 'components/footer.scss';
@import 'components/header.scss';
@import 'components/promotion-banner.scss';
@import 'components/textfields.scss';

// display
@import 'display/grid.scss';
@import 'display/typography.scss';
@import 'display/sections.scss';
@import 'display/spacing.scss';

// lib
@import 'lib/markdown.scss';

* {
    box-sizing: border-box;
}

body {
    font-family: $fonts;
    background-color: #fff;

    main {
        min-height: calc(100vh - 104px - 180px);
    }
}

.fm-morphing-icon {
    position: absolute;
    opacity: 0;
    transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);

    &[morphed] {
        transform: translate(0) rotate(0deg) scale(1) !important;
        opacity: 1;
    }
}

.video-container { 
    overflow: hidden; 
    padding-bottom: 56.25%; 
    position: relative; 
    height: 0;

    iframe {
        left: 0; 
        top: 0; 
        height: 100%;
        width: 100%;
        position: absolute;
        background-color: #fff;

        &.skeleton {
            background: linear-gradient(90deg,#f2f2f2 25%,#dadada 37%,#f2f2f2 63%);
            background-size: 400% 100%;
            animation: skeleton-loading 1.4s ease infinite;
        }
    }
}

@keyframes skeleton-loading {
    0% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 0 50%;
    }
}

// select
select {
    height: 48px;
    padding: 0 12px;
    text-decoration: none;
    border: none;
    box-shadow: 0 0 0 1px inset grey;
    border-radius: 4px;
    color: grey;
    display: inline-block;
    background: transparent;
    cursor: pointer;

    &:hover {
        box-shadow: 0 0 0 1px inset black;
        color: black;
    }

    option {
        font-size: 1.2rem;
    }
}

// form
.form-group {
    width: 100%;

    input, textarea {
        width: 100%;
        margin-bottom: 8px;
        font-size: 1rem;
        padding: 8px;
        background: transparent;
        border: 1px solid #888;
        border-radius: 4px;
    }

    input {
        height: 42px;
    }
}

// loaders
.center {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.loader ellipse {
    stroke-dasharray: 10, 9999;
    animation: load 2s cubic-bezier(0.8,0.25,0.25,0.9) infinite, spin 2s linear infinite;
    transform-origin: center;
}

@keyframes load {
	50% {
		stroke-dasharray: 140;
		stroke-dashoffset: 0;
		transform: rotateZ(0deg);
	}
	100% {
		stroke-dasharray: 146;
		stroke-dashoffset: -156;
	}
}

@keyframes spin {
	to {
		-webkit-transform:rotateZ(360deg);
	}
}

// boxes
.error {
    padding: 16px;
    background: #fce8e6;

    p, a {
        color: #c5221f;
    }
}

.info {
    padding: 16px;
    background: #fef7e0;

    p, a {
        color: #b05a00;
    }
}

.fm-outlined {
    &:hover, &:focus, &:active {
        outline: auto;
        outline-style: solid;
        outline-color: #ddd;
        outline-offset: 16px;
        outline-width: 2px;
    }
}

// responsive
main {
    margin: 16px !important;
    min-height: 50vh;
}

.md-overlay {
    height: 100vh;
}

.divided {
    aside {
        margin: 0 16px;
    }
}

@media screen and(min-width: 700px) {
    main, .fm-main-padding {
        margin: 16px $padding !important;
    }

    .divided {
        main+aside {
            margin: 16px $padding;
        }
    }
}

@media screen and(min-width: 900px) {
    .divided {
        display: flex;

        main {
            width: calc(100% - 280px);
            position: relative;
            margin-right: 32px !important;
            
            &+aside {
                display: block;
                width: 268px;
                margin: 16px $padding;
                margin-left: 0;
            }
        }
    }
}

// images
a img:hover {
    filter: brightness(0.8);
}

// details
details {
    summary {
        list-style: none;
    
        &::marker {
            display:none;
        }
    
        .md-icon {
            transition: transform 150ms ease-out !important;
        }
    }

    &[open] summary .md-icon {
        transform: rotate(180deg);
    }
}

